; ModuleID = '/home/carl/AnghaBench/linux/net/802/extr_mrp.c_mrp_queue_xmit.c'
source_filename = "/home/carl/AnghaBench/linux/net/802/extr_mrp.c_mrp_queue_xmit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mrp_applicant = type { i32 }
%struct.sk_buff = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mrp_applicant*)* @mrp_queue_xmit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mrp_queue_xmit(%struct.mrp_applicant* %0) #0 {
  %2 = alloca %struct.mrp_applicant*, align 8
  %3 = alloca %struct.sk_buff*, align 8
  store %struct.mrp_applicant* %0, %struct.mrp_applicant** %2, align 8
  br label %4

4:                                                ; preds = %9, %1
  %5 = load %struct.mrp_applicant*, %struct.mrp_applicant** %2, align 8
  %6 = getelementptr inbounds %struct.mrp_applicant, %struct.mrp_applicant* %5, i32 0, i32 0
  %7 = call %struct.sk_buff* @skb_dequeue(i32* %6)
  store %struct.sk_buff* %7, %struct.sk_buff** %3, align 8
  %8 = icmp ne %struct.sk_buff* %7, null
  br i1 %8, label %9, label %12

9:                                                ; preds = %4
  %10 = load %struct.sk_buff*, %struct.sk_buff** %3, align 8
  %11 = call i32 @dev_queue_xmit(%struct.sk_buff* %10)
  br label %4

12:                                               ; preds = %4
  ret void
}

declare dso_local %struct.sk_buff* @skb_dequeue(i32*) #1

declare dso_local i32 @dev_queue_xmit(%struct.sk_buff*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
